# worklife-test-main

./: .env  .pre-commit-config.yaml  Dockerfile  README-senior.md  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 27bf2aa3b8c7_first_migration.py
app/api/: __init__.py
app/api/routes/: employee.py  vacation.py
app/core/: config.py
app/db/: session.py
app/model/: __init__.py  base.py  custom_uuid.py  employee.py  team.py  vacation.py
app/repository/: employee.py  team.py  vacation.py
app/schema/: __init__.py  checks.py  employee.py  team.py  vacation.py
scripts/: create_db.sql
