[tool.poetry]
name = "worklife-test"
version = "0.3.0"
description = "Test for Worklife, Senior version"
authors = ["Sylvain Faugier <sylvain.faugier@sublime.mu>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.4"}
sqlalchemy = "^2.0.38"
pydantic = "^2.10.6"
psycopg2-binary = "^2.9.10"
alembic = "^1.9.4"
fastapi-utils = "^0.7.0"
typing-inspect = "^0.9.0"
pydantic-settings = "^2.7.1"

# The "poetry.dev-dependencies" section is deprecated and will be removed in a future version.
# Use "poetry.group.dev.dependencies" instead.
[tool.poetry.dev-dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.15.0"
pre-commit = "^3.8.0"
pytest = "^8.3.4"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.3.7"

[tool.ruff]
line-length = 88
lint.ignore = ["F401"]

[tool.isort]
profile = "black"
